--- a/frontend/src/sass/index.scss
+++ b/frontend/src/sass/index.scss
@@ -45,14 +45,14 @@
 body {
   margin: 0;
   padding: 0;
+  background-image: url(/background-register.jpg);
+  background-position: center;
+  background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: $color-quentin;
-  background: linear-gradient(0deg, $color-quentin 13%, $color-solene 56%);
-  overflow-y: auto;
 }
 
 html,
@@ -64,3 +64,36 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-text-fill-color: $color-secondary;
+  -webkit-box-shadow: 0 0 0px 1000px #fff inset;
+}
+
+::-moz-focus-outer {
+  border: 0;
+}
+
+input {
+  border: 2px solid $color-primary;
+  border-radius: 20px;
+  outline: none;
+  background: white;
+  color: $color-secondary;
+
+  &:focus {
+    border: 3px solid $color-primary;
+  }
+}
+
+@import 'components/Loader';
+
+@import 'components/Register';
