--- a/frontend/src/sass/_settings.scss
+++ b/frontend/src/sass/_settings.scss
@@ -10,4 +10,4 @@ $color-quentin: #9fd1ea;
 $color-solene: #ea9faa;
 
 $color-primary: #ff8a9b;
-$color-secondary: #58afda;
+$color-secondary: #5aa9cc;
