--- a/frontend/src/sass/index.scss
+++ b/frontend/src/sass/index.scss
@@ -87,10 +87,11 @@ input {
   border-radius: 20px;
   outline: none;
   background: white;
-  color: $color-secondary;
+  color: $color-primary;
 
   &:focus {
-    border: 3px solid $color-primary;
+    border: 3px solid $color-secondary;
+    color: $color-secondary;
   }
 }
 
