--- a/frontend/src/sass/index.scss
+++ b/frontend/src/sass/index.scss
@@ -90,8 +90,25 @@ input {
   color: $color-primary;
 
   &:focus {
-    border: 3px solid $color-secondary;
+    border: 3px solid $color-primary;
     color: $color-secondary;
+  }
+}
+
+.Button {
+  border: none;
+  background: $color-secondary;
+  outline: none;
+  font-size: 30px;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: box-shadow 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+
+  &:hover {
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   }
 }
 
