--- a/frontend/src/sass/_settings.scss
+++ b/frontend/src/sass/_settings.scss
@@ -6,8 +6,8 @@ $color-dark: #646464;
 $color-mid: #9a9a9a;
 $color-light: #f7f7f7;
 
-$color-quentin: #9fd1ea;
-$color-solene: #ea9faa;
+$color-primary: rgb(211, 133, 119);
+$color-primary-light: rgb(243, 223, 209);
 
-$color-primary: #ff8a9b;
-$color-secondary: #5aa9cc;
+$color-secondary: rgb(67, 131, 160);
+$color-secondary-light: rgb(225, 233, 242);
