--- a/frontend/src/sass/index.scss
+++ b/frontend/src/sass/index.scss
@@ -45,9 +45,10 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url(/background-register.jpg);
+  background-color: $color-primary-light;
+  /* background-image: url(/background-register.jpg);
   background-position: center;
-  background-size: cover;
+  background-size: cover; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -115,3 +116,4 @@ input {
 @import 'components/Loader';
 
 @import 'components/Register';
+@import 'components/Registered';
