--- a/frontend/src/sass/components/Registered.scss
+++ b/frontend/src/sass/components/Registered.scss
@@ -19,18 +19,20 @@ $white: #fff;
 // Misc
 $curve: cubic-bezier(0.65, 0, 0.45, 1);
 
+.Registered--checkmarkContainer {
+  position: relative;
+}
+
 .Registered--checkmark {
   margin: 0;
-  width: 80px;
-  height: 80px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   display: block;
   stroke-width: 4;
-  stroke: $white;
+  stroke: $color-primary;
   stroke-miterlimit: 10;
-  box-shadow: inset 0px 0px 0px $color-primary;
-  animation: fill 0.4s ease-in-out 0.4s forwards,
-    scale 0.3s ease-in-out 0.9s both;
+  animation: scale 0.3s ease-in-out 0.9s both;
 }
 
 .Registered--checkmarkCircle {
@@ -43,11 +45,12 @@ $curve: cubic-bezier(0.65, 0, 0.45, 1);
   animation: stroke 0.6s $curve forwards;
 }
 
-.Registered--checkmarkCheck {
-  transform-origin: 50% 50%;
-  stroke-dasharray: 48;
-  stroke-dashoffset: 48;
-  animation: stroke 0.3s $curve 0.8s forwards;
+.Registered--names {
+  width: 90px;
+  position: absolute;
+  top: 3px;
+  left: 6px;
+  animation: scale 0.3s ease-in-out 0.9s both;
 }
 
 @keyframes stroke {
@@ -63,11 +66,5 @@ $curve: cubic-bezier(0.65, 0, 0.45, 1);
   }
   50% {
     transform: scale3d(1.1, 1.1, 1);
-  }
-}
-
-@keyframes fill {
-  100% {
-    box-shadow: inset 0px 0px 0px 40px $color-primary;
   }
 }
