login/logout feature

--- a/frontend/src/sass/index.scss
+++ b/frontend/src/sass/index.scss
@@ -116,5 +116,6 @@ input {
 @import 'components/Loader';
 
 @import 'components/Register';
+@import 'components/Login';
 @import 'components/Registered';
 @import 'components/Header';
