--- a/frontend/src/sass/_settings.scss
+++ b/frontend/src/sass/_settings.scss
@@ -6,8 +6,9 @@ $color-dark: #646464;
 $color-mid: #9a9a9a;
 $color-light: #f7f7f7;
 
-$color-primary: rgb(211, 133, 119);
+$color-primary: #d38577;
 $color-primary-light: rgb(243, 223, 209);
+$color-footer: #f7f0ec;
 
-$color-secondary: rgb(67, 131, 160);
+$color-secondary: #4a68a1;
 $color-secondary-light: rgb(225, 233, 242);
