--- a/frontend/src/sass/components/Register.scss
+++ b/frontend/src/sass/components/Register.scss
@@ -7,7 +7,6 @@
     justify-content: center;
     flex-direction: column;
     min-height: 100vh;
-    padding-top: 30px;
 
     > p {
       min-height: 30vh;
@@ -18,7 +17,7 @@
       font-size: 30px;
       margin: 0;
       flex: 1;
-      padding: 0 15px;
+      padding: 30px 15px 0 15px;
 
       @media screen and (max-width: 550px) {
         font-size: 24px;
