--- a/frontend/src/sass/components/Registered.scss
+++ b/frontend/src/sass/components/Registered.scss
@@ -19,8 +19,17 @@ $white: #fff;
 // Misc
 $curve: cubic-bezier(0.65, 0, 0.45, 1);
 
+.st0 {
+  fill: #f7f0ec;
+}
+.st1 {
+  fill: #d48577;
+}
+
 .Registered--checkmarkContainer {
   position: relative;
+  width: 130px;
+  height: 130px;
 }
 
 .Registered--checkmark {
@@ -29,16 +38,16 @@ $curve: cubic-bezier(0.65, 0, 0.45, 1);
   height: 100px;
   border-radius: 50%;
   display: block;
-  stroke-width: 4;
-  stroke: $color-primary;
-  stroke-miterlimit: 10;
+  stroke: #bd6362;
   animation: scale 0.3s ease-in-out 0.9s both;
+  position: absolute;
+  left: 16px;
 }
 
 .Registered--checkmarkCircle {
   stroke-dasharray: 166;
   stroke-dashoffset: 166;
-  stroke-width: 2;
+  stroke-width: 1;
   stroke-miterlimit: 10;
   stroke: $color-primary;
   fill: none;
@@ -46,10 +55,10 @@ $curve: cubic-bezier(0.65, 0, 0.45, 1);
 }
 
 .Registered--names {
-  width: 90px;
+  width: 130px;
   position: absolute;
-  top: 3px;
-  left: 6px;
+  top: 0px;
+  left: 0px;
   animation: scale 0.3s ease-in-out 0.9s both;
 }
 
