better user serialization and people attending update

--- a/frontend/src/sass/_settings.scss
+++ b/frontend/src/sass/_settings.scss
@@ -10,5 +10,5 @@ $color-primary: #bd6362;
 $color-primary-light: #f0d8d1;
 $color-footer: #f7f0ec;
 
-$color-secondary: #2d3e44;
+$color-secondary: #114a5f;
 $color-secondary-light: rgb(225, 233, 242);
