transport page design

--- a/frontend/src/sass/index.scss
+++ b/frontend/src/sass/index.scss
@@ -114,9 +114,11 @@ input {
 
 @import 'components/Loader';
 @import 'components/Layout';
+@import 'components/NextPageArrow';
 
 @import 'components/Register';
 @import 'components/Login';
 @import 'components/Registered';
 @import 'components/Home';
 @import 'components/Guest';
+@import 'components/Transport';
