--- a/frontend/src/sass/components/Guest.scss
+++ b/frontend/src/sass/components/Guest.scss
@@ -6,6 +6,10 @@
   max-width: 1024px;
   flex-wrap: wrap;
   margin-bottom: 100px;
+
+  @media screen and (max-width: 768px) {
+    margin-bottom: 0;
+  }
 }
 
 .Guest__peopleContainer {
@@ -15,6 +19,11 @@
   border-right: 1px solid $color-primary;
   width: 33.33%;
   margin-bottom: 30px;
+
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    border-right: none;
+  }
 
   &:nth-child(3n) {
     border-right: none;
@@ -65,14 +74,27 @@
   text-align: center;
   color: $color-primary;
 
+  @media screen and (max-width: 768px) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
   &--heading {
     font-size: 30px;
     font-weight: 500;
     margin-bottom: 20px;
+
+    @media screen and (max-width: 768px) {
+      font-size: 26px;
+    }
   }
 
   &--content {
     font-size: 22px;
+
+    @media screen and (max-width: 768px) {
+      font-size: 18px;
+    }
   }
 }
 
@@ -92,5 +114,9 @@
   &:focus {
     box-shadow: none;
     border: 2px solid $color-primary;
+  }
+
+  @media screen and (max-width: 768px) {
+    margin: 0 20px 30px;
   }
 }
