--- a/frontend/src/sass/components/NextPageArrow.scss
+++ b/frontend/src/sass/components/NextPageArrow.scss
@@ -19,6 +19,59 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .NextPageArrow__link {
+    position: relative;
+    top: unset;
+    right: unset;
+    transform: none;
+    border: none;
+    background: $color-secondary;
+    outline: none;
+    text-decoration: none;
+    font-size: 30px;
+    color: white;
+    padding: 10px 40px 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: box-shadow 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    margin: 0 20px 120px;
+    display: block;
+
+    &:hover {
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    }
+
+    &::after {
+      background-image: url('../../assets/arrow-white.svg');
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+      content: '';
+      position: absolute;
+      right: 20px;
+      top: 50%;
+      transform: translate(0, -50%);
+      display: block;
+      width: 30px;
+      height: 30px;
+    }
+
+    & > span {
+      position: relative;
+      top: unset;
+      width: initial;
+      transform: none;
+      text-align: left;
+    }
+
+    img {
+      display: none;
+    }
+  }
+}
+
 @keyframes jumpingArrow {
   0% {
     transform: translate(-15px, -50%);
