--- a/frontend/src/sass/components/Transport.scss
+++ b/frontend/src/sass/components/Transport.scss
@@ -16,6 +16,12 @@
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15), 0 2px 2px rgba(0, 0, 0, 0.15),
     0 4px 4px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0.15);
 
+  @media screen and (max-width: 768px) {
+    height: 150px;
+    width: 150px;
+    margin-bottom: 20px;
+  }
+
   &.selected {
     background: $color-primary;
     color: white;
@@ -24,6 +30,10 @@
 
   i {
     font-size: 60px;
+
+    @media screen and (max-width: 768px) {
+      font-size: 50px;
+    }
   }
 
   > .TransportButton__check {
@@ -31,6 +41,10 @@
     top: 77%;
     color: white;
     font-size: 30px;
+
+    @media screen and (max-width: 768px) {
+      top: 80%;
+    }
   }
 }
 
@@ -38,6 +52,10 @@
   font-size: 25px;
   text-align: center;
   height: 56px;
+
+  @media screen and (max-width: 768px) {
+    font-size: 18px;
+  }
 }
 
 .Transport__container {
@@ -49,4 +67,8 @@
   flex-wrap: wrap;
   margin-bottom: 100px;
   justify-content: space-around;
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+  }
 }
