--- a/frontend/src/sass/_settings.scss
+++ b/frontend/src/sass/_settings.scss
@@ -6,7 +6,7 @@ $color-dark: #646464;
 $color-mid: #9a9a9a;
 $color-light: #f7f7f7;
 
-$color-primary: #bd6362;
+$color-primary: #933f3e;
 $color-primary-light: #f0d8d1;
 $color-footer: #f7f0ec;
 
